tests/sksl/errors/UnsupportedGLSLIdentifiers.glsl
### Compilation failed:

error: 1: 'gl_FragCoord' is a reserved word
error: 1: unknown identifier 'gl_FragCoord'
error: 2: 'gl_FragColor' is a reserved word
error: 2: unknown identifier 'gl_FragColor'
4 errors
